Traduction de l'entiereter des pages en anglais

--- a/en/adalovelace.html
+++ b/en/adalovelace.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -14,33 +14,33 @@
     <header>
         <section class="header_logo">
             <div class="header_logo-block">
-                <img class="header_logo-image" src="../assets/img/Logo_header.avif" alt="Image de Ada Lovelace">
+                <img class="header_logo-image" src="../assets/img/Logo_header.avif" alt="Image of Ada Lovelace">
                 <div class="header_logo-composant"></div>
                 <div class="header_logo-ada">
-                    <a href="index.html"><img src="../assets/img/logo ADA.svg" alt="Image du logo de Ada Lovelace "></a>
+                    <a href="index.html"><img src="../assets/img/logo ADA.svg" alt="Ada Lovelace logo"></a>
                 </div>
             </div>
         </section>
         <h1 class="header__title">Ada <br> Lovelace</h1>
-        <div class="language-selector" role="navigation" aria-label="Sélecteur de langue">
-            <a href="/en/" class="language-selector__link language-selector__link--active"
-                aria-label="Passer à la version anglaise">FR</a>
+        <div class="language-selector" role="navigation" aria-label="Language selector">
+            <a href="/fr/" class="language-selector__link language-selector__link--active"
+                aria-label="Switch to French version">EN</a>
         </div>
     </header>
 
     <nav class="menu">
-        <button class="menu__toggle" aria-label="Ouvrir le menu">
+        <button class="menu__toggle" aria-label="Open menu">
             <span class="menu__bar"></span>
             <span class="menu__bar"></span>
             <span class="menu__bar"></span>
         </button>
 
-        <div class="menu__overlay" role="dialog" aria-label="Menu de navigation principal">
+        <div class="menu__overlay" role="dialog" aria-label="Main navigation menu">
             <ul class="menu__list" role="menu">
                 <li>
                     <a href="index.html" class="menu__button"
                         style="background-image: url('../assets/img/hero_page_accueil2.avif')">
-                        <span>Page d'accueil</span>
+                        <span>Home</span>
                     </a>
                 </li>
                 <li>
@@ -52,13 +52,13 @@
                 <li>
                     <a href="effetmatilda.html" class="menu__button"
                         style="background-image: url('../assets/img/card2.avif')">
-                        <span>L'effet Matilda</span>
+                        <span>The Matilda Effect</span>
                     </a>
                 </li>
                 <li>
                     <a href="scienceada.html" class="menu__button"
                         style="background-image: url('../assets/img/card3.avif')">
-                        <span>La science d'Ada</span>
+                        <span>Science from Ada</span>
                     </a>
                 </li>
                 <li>
@@ -70,19 +70,17 @@
                 <li>
                     <a href="litterature.html" class="menu__button"
                         style="background-image: url('../assets/img/card5.avif')">
-                        <span>Ada dans la littérature</span>
+                        <span>Ada in Literature</span>
                     </a>
                 </li>
             </ul>
 
-            <div class="menu__footer" role="navigation" aria-label="Liens secondaires">
-                <a href="glossaire.html" class="menu__footer-link" aria-label="Consulter le glossaire">Glossaire</a>
-                <a href="contact.html" class="menu__footer-link"
-                    aria-label="Accéder au formulaire de contact">Contactez-nous</a>
-                <a href="a-propos.html" class="menu__footer-link" aria-label="En savoir plus à propos du projet">À
-                    propos</a>
-                <a href="autres-projets.html" class="menu__footer-link" aria-label="Découvrir d'autres projets">Autres
-                    projets</a>
+            <div class="menu__footer" role="navigation" aria-label="Secondary links">
+                <a href="glossaire.html" class="menu__footer-link" aria-label="Consult the glossary">Glossary</a>
+                <a href="contact.html" class="menu__footer-link" aria-label="Access the contact form">Contact us</a>
+                <a href="a-propos.html" class="menu__footer-link" aria-label="Learn more about the project">About</a>
+                <a href="autres-projets.html" class="menu__footer-link" aria-label="Discover other projects">Other
+                    projects</a>
             </div>
         </div>
     </nav>
@@ -90,72 +88,73 @@
     <main>
         <section class="hero">
             <div class="hero__ada">
-                <img src="../assets/img/hero_page_Ada.avif" alt="Hero de la page d'Ada Lovelace">
+                <img src="../assets/img/hero_page_Ada.avif" alt="Hero of Ada Lovelace page">
             </div>
         </section>
         <section class="section__title">
-            <h2>Qui est Ada Lovelace ?</h2>
+            <h2>Who is Ada Lovelace?</h2>
         </section>
         <section class="info-block">
-            <h3 class="info-block__title">Informations sur cette personne</h3>
+            <h3 class="info-block__title">Information about this person</h3>
             <div class="info-block__wrapper">
                 <div class="info-block__image">
-                    <img src="../assets/img/Image1_page_Ada.avif" alt="Portrait d'Ada Lovelace" loading="lazy">
-                    <img src="../assets/img/signature.svg" alt="Signature d'Ada Lovelace" loading="lazy">
+                    <img src="../assets/img/Image1_page_Ada.avif" alt="Portrait of Ada Lovelace" loading="lazy">
+                    <img src="../assets/img/signature.svg" alt="Signature of Ada Lovelace" loading="lazy">
                 </div>
                 <div class="info-block__content">
-                    <p><strong>Nom:</strong> Ada Lovelace</p>
-                    <p><strong>Nom complet:</strong> Augusta Ada King, comtesse de Lovelace</p>
-                    <p><strong>Née:</strong> 10 décembre 1815, Londres</p>
-                    <p><strong>Mort:</strong> 27 novembre 1852, Londres</p>
-                    <p><strong>Nationalité:</strong> Britannique</p>
-                    <p><strong>Profession:</strong> Mathématicienne, pionnière de l'informatique</p>
+                    <p><strong>Name:</strong> Ada Lovelace</p>
+                    <p><strong>Full Name:</strong> Augusta Ada King, Countess of Lovelace</p>
+                    <p><strong>Born:</strong> December 10, 1815, London</p>
+                    <p><strong>Died:</strong> November 27, 1852, London</p>
+                    <p><strong>Nationality:</strong> British</p>
+                    <p><strong>Profession:</strong> Mathematician, pioneer of computing</p>
                 </div>
             </div>
         </section>
         <section class="info-block__purple">
-            <h3 class="info-block__title">La naissance de Ada Lovelace</h3>
+            <h3 class="info-block__title">The birth of Ada Lovelace</h3>
             <div class="info-block__wrapper">
                 <div class="info-block__image--purple">
-                    <img src="../assets/img/Image2_page_Ada.avif" alt="Histoire d'Ada Lovelace" loading="lazy">
+                    <img src="../assets/img/Image2_page_Ada.avif" alt="Story of Ada Lovelace" loading="lazy">
                 </div>
                 <div class="info-block__content">
-                    <p>Fille du célèbre poète Lord Byron et de Lady Annabella Milbanke, fervente passionnée de
-                        mathématiques, Ada reçoit une éducation scientifique rare pour une femme de son époque, sa mère
-                        souhaitant l’éloigner du tempérament romantique de son père.</p>
+                    <p>Daughter of the famous poet Lord Byron and Lady Annabella Milbanke, a fervent mathematics
+                        enthusiast, Ada received a scientific education rare for a woman of her time, as her mother
+                        wished to distance her from her father's romantic temperament.</p>
                 </div>
             </div>
         </section>
         <section class="info-leftblock__purple">
-            <h3 class="info-leftblock__title">La naissance de Ada Lovelace</h3>
+            <h3 class="info-leftblock__title">The adolescence of Ada Lovelace</h3>
             <div class="info-leftblock__wrapper">
                 <div class="info-leftblock__image--purple">
-                    <img src="../assets/img/Image3_page_Ada.avif" alt="Portrait d'Ada Lovelace" loading="lazy">
+                    <img src="../assets/img/Image3_page_Ada.avif" alt="Portrait of Ada Lovelace" loading="lazy">
                 </div>
                 <div class="info-leftblock__content">
-                    <p>Dès son adolescence, Ada démontre un grand talent pour les mathématiques. En 1832, elle
-                        rencontre Mary Somerville, scientifique écossaise reconnue, qui devient son mentor. C’est par
-                        son intermédiaire qu’elle fait la connaissance de Charles Babbage, inventeur de la machine à
-                        différences puis de la machine analytique, considérée comme le premier modèle d’ordinateur.</p>
+                    <p>From her adolescence, Ada demonstrated a great talent for mathematics. In 1832, she met Mary
+                        Somerville, a renowned Scottish scientist, who became her mentor. It was through her that she
+                        met Charles Babbage, inventor of the difference engine and then the analytical engine,
+                        considered the first model of a computer.</p>
                 </div>
             </div>
         </section>
         <section class="citation">
             <blockquote>
-                <p>« Mon travail mathématique implique une imagination considérable. »</p>
+                <p>« My mathematical work involves considerable imagination. »</p>
             </blockquote>
         </section>
-        <h2 class="citation__personne">Citation d’Ada Lovelace</h2>
+        <h2 class="citation__personne">Quote from Ada Lovelace</h2>
         <section class="image__representation">
-            <img src="../assets/img/Image4_page_Ada.avif" alt="Image d'Ada Lovelace et Charles Babbage" loading="lazy">
+            <img src="../assets/img/Image4_page_Ada.avif" alt="Image of Ada Lovelace and Charles Babbage"
+                loading="lazy">
         </section>
         <section class="text__main">
-            <h2 class="textmono-title">Pourquoi est-elle connue?
-                <h3 class="textmono-content">Ada Lovelace, pionnière britannique des mathématiques et de l’informatique,
-                    est célèbre pour avoir réalisé le premier véritable programme informatique. Entre 1842 et 1843, elle
-                    travaille aux côtés de Charles Babbage sur son ambitieux projet de machine analytique, un dispositif
-                    mécanique capable d’exécuter des calculs complexes et de suivre des instructions enregistrées sur
-                    des cartes perforées, ancêtre des ordinateurs modernes</h3>
+            <h2 class="textmono-title">Why is she known?
+                <h3 class="textmono-content">Ada Lovelace, British pioneer of mathematics and computing,
+                    is famous for having created the first true computer program. Between 1842 and 1843, she
+                    worked alongside Charles Babbage on his ambitious analytical engine project, a mechanical device
+                    capable of performing complex calculations and following instructions recorded on punch cards,
+                    ancestor of modern computers</h3>
             </h2>
         </section>
     </main>
@@ -171,22 +170,22 @@
                 </div>
             </div>
             <div class="footer__leftelement">
-                <p>MENTIONS LÉGALES</p>
+                <p>LEGAL NOTICE</p>
                 <div class="footer__leftelement-text">
-                    <p>“projet réalisé en 2025 dans le cadre d’un exercice pédagogique au département MMi de
+                    <p>"project carried out in 2025 as part of a pedagogical exercise at the MMi department of
                         Montbéliard“</p>
                 </div>
             </div>
         </div>
 
         <div class="footer__right">
-            <a href="glossaire.html" class="footer__rightelement">Glossaire</a>
-            <a href="contact.html" class="footer__rightelement">Contactez-nous</a>
-            <a href="a-propos.html" class="footer__rightelement">À propos</a>
-            <a href="autres-projets.html" class="footer__rightelement">Autres Projets</a>
+            <a href="glossaire.html" class="footer__rightelement">Glossary</a>
+            <a href="contact.html" class="footer__rightelement">Contact us</a>
+            <a href="a-propos.html" class="footer__rightelement">About</a>
+            <a href="autres-projets.html" class="footer__rightelement">Other Projects</a>
             <div class="footer__division"></div>
             <a href="https://www.iut-nfc.univ-fcomte.fr/b-u-t-metiers-du-multimedia-et-de-linternet/" target="_blank"
-                class="footer__logoMMi" aria-label="Visiter le site du département MMi (nouvelle fenêtre)">
+                class="footer__logoMMi" aria-label="Visit the MMi department website (new window)">
                 <img src="../assets/img/MMI_logo.svg" alt="Logo MMi">
             </a>
         </div>
