--- a/en/autres-projets.html
+++ b/en/autres-projets.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Autres Projets</title>
+    <title>Other Projects</title>
     <link rel="stylesheet" href="../src/css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Elsie+Swash+Caps&display=swap">
@@ -14,33 +14,33 @@
     <header>
         <section class="header_logo">
             <div class="header_logo-block">
-                <img class="header_logo-image" src="../assets/img/Logo_header.avif" alt="Image de Ada Lovelace">
+                <img class="header_logo-image" src="../assets/img/Logo_header.avif" alt="Image of Ada Lovelace">
                 <div class="header_logo-composant"></div>
                 <div class="header_logo-ada">
-                    <a href="index.html"><img src="../assets/img/logo ADA.svg" alt="Image du logo de Ada Lovelace "></a>
+                    <a href="index.html"><img src="../assets/img/logo ADA.svg" alt="Ada Lovelace logo"></a>
                 </div>
             </div>
         </section>
-        <h1 class="header__title">Autres <br> Projets</h1>
-        <div class="language-selector" role="navigation" aria-label="Sélecteur de langue">
-            <a href="/en/" class="language-selector__link language-selector__link--active"
-                aria-label="Passer à la version anglaise">FR</a>
+        <h1 class="header__title">Other <br> Projects</h1>
+        <div class="language-selector" role="navigation" aria-label="Language selector">
+            <a href="/fr/" class="language-selector__link language-selector__link--active"
+                aria-label="Switch to French version">EN</a>
         </div>
     </header>
 
     <nav class="menu">
-        <button class="menu__toggle" aria-label="Ouvrir le menu">
+        <button class="menu__toggle" aria-label="Open menu">
             <span class="menu__bar"></span>
             <span class="menu__bar"></span>
             <span class="menu__bar"></span>
         </button>
 
-        <div class="menu__overlay" role="dialog" aria-label="Menu de navigation principal">
+        <div class="menu__overlay" role="dialog" aria-label="Main navigation menu">
             <ul class="menu__list" role="menu">
                 <li>
                     <a href="index.html" class="menu__button"
                         style="background-image: url('../assets/img/hero_page_accueil2.avif')">
-                        <span>Page d'accueil</span>
+                        <span>Home</span>
                     </a>
                 </li>
                 <li>
@@ -52,13 +52,13 @@
                 <li>
                     <a href="effetmatilda.html" class="menu__button"
                         style="background-image: url('../assets/img/card2.avif')">
-                        <span>L'effet Matilda</span>
+                        <span>The Matilda Effect</span>
                     </a>
                 </li>
                 <li>
                     <a href="scienceada.html" class="menu__button"
                         style="background-image: url('../assets/img/card3.avif')">
-                        <span>La science d'Ada</span>
+                        <span>Science from Ada</span>
                     </a>
                 </li>
                 <li>
@@ -70,19 +70,17 @@
                 <li>
                     <a href="litterature.html" class="menu__button"
                         style="background-image: url('../assets/img/card5.avif')">
-                        <span>Ada dans la littérature</span>
+                        <span>Ada in Literature</span>
                     </a>
                 </li>
             </ul>
 
-            <div class="menu__footer" role="navigation" aria-label="Liens secondaires">
-                <a href="glossaire.html" class="menu__footer-link" aria-label="Consulter le glossaire">Glossaire</a>
-                <a href="contact.html" class="menu__footer-link"
-                    aria-label="Accéder au formulaire de contact">Contactez-nous</a>
-                <a href="a-propos.html" class="menu__footer-link" aria-label="En savoir plus à propos du projet">À
-                    propos</a>
-                <a href="autres-projets.html" class="menu__footer-link" aria-label="Découvrir d'autres projets">Autres
-                    projets</a>
+            <div class="menu__footer" role="navigation" aria-label="Secondary links">
+                <a href="glossaire.html" class="menu__footer-link" aria-label="Consult the glossary">Glossary</a>
+                <a href="contact.html" class="menu__footer-link" aria-label="Access the contact form">Contact us</a>
+                <a href="a-propos.html" class="menu__footer-link" aria-label="Learn more about the project">About</a>
+                <a href="autres-projets.html" class="menu__footer-link" aria-label="Discover other projects">Other
+                    projects</a>
             </div>
         </div>
     </nav>
@@ -99,7 +97,7 @@
                 </div>
                 <div class="project-card__content">
                     <h3 class="project-card__title">Étoiles Oubliées</h3>
-                    <p class="project-card__description">Projet de Lilian Maitre</p>
+                    <p class="project-card__description">Project by Lilian Maitre</p>
                 </div>
             </div>
 
@@ -107,22 +105,22 @@
 
             <div class="project-card">
                 <div class="project-card__image">
-                    <img src="../assets/img/image2_page_Autre.avif" alt="Logo du projet">
+                    <img src="../assets/img/image2_page_Autre.avif" alt="Project logo">
                 </div>
                 <div class="project-card__content">
                     <h3 class="project-card__title">Empreinte</h3>
-                    <p class="project-card__description">Projet de Yanis Chouhib</p>
+                    <p class="project-card__description">Project by Yanis Chouhib</p>
                 </div>
             </div>
             <div class="project-divider"></div>
 
             <div class="project-card">
                 <div class="project-card__image">
-                    <img src="../assets/img/image3_page_Autre.avif" alt="Logo du projet">
+                    <img src="../assets/img/image3_page_Autre.avif" alt="Project logo">
                 </div>
                 <div class="project-card__content">
                     <h3 class="project-card__title">Jocelynn Bell</h3>
-                    <p class="project-card__description">Projet de Estelle Coulon</p>
+                    <p class="project-card__description">Project by Estelle Coulon</p>
                 </div>
             </div>
 
@@ -130,22 +128,22 @@
 
             <div class="project-card">
                 <div class="project-card__image project-card__image--smaller">
-                    <img src="../assets/img/image4_page_Autre.avif" alt="Logo du projet">
+                    <img src="../assets/img/image4_page_Autre.avif" alt="Project logo">
                 </div>
                 <div class="project-card__content">
                     <h3 class="project-card__title">AQITA</h3>
-                    <p class="project-card__description">Projet de Melvyn Philippon</p>
+                    <p class="project-card__description">Project by Melvyn Philippon</p>
                 </div>
             </div>
             <div class="project-divider"></div>
 
             <div class="project-card">
                 <div class="project-card__image">
-                    <img src="../assets/img/image5_page_Autre.avif" alt="Logo du projet">
+                    <img src="../assets/img/image5_page_Autre.avif" alt="Project logo">
                 </div>
                 <div class="project-card__content">
                     <h3 class="project-card__title">Radiance</h3>
-                    <p class="project-card__description">Projet de Alex Ringerbach</p>
+                    <p class="project-card__description">Project by Alex Ringerbach</p>
                 </div>
             </div>
 
@@ -153,22 +151,22 @@
 
             <div class="project-card">
                 <div class="project-card__image">
-                    <img src="../assets/img/image6_page_Autre.avif" alt="Logo du projet">
+                    <img src="../assets/img/image6_page_Autre.avif" alt="Project logo">
                 </div>
                 <div class="project-card__content">
                     <h3 class="project-card__title">Empreintes féminines dans la science</h3>
-                    <p class="project-card__description">Projet de Maman Thilor Sambe</p>
+                    <p class="project-card__description">Project by Maman Thilor Sambe</p>
                 </div>
             </div>
             <div class="project-divider"></div>
 
             <div class="project-card">
                 <div class="project-card__image">
-                    <img src="../assets/img/image7_page_Autre.avif" alt="Logo du projet">
+                    <img src="../assets/img/image7_page_Autre.avif" alt="Project logo">
                 </div>
                 <div class="project-card__content">
                     <h3 class="project-card__title">Marie Meurdrac: l'essence d'une femme de science</h3>
-                    <p class="project-card__description">Projet de Ines Sittler</p>
+                    <p class="project-card__description">Project by Ines Sittler</p>
                 </div>
             </div>
 
@@ -176,11 +174,11 @@
 
             <div class="project-card">
                 <div class="project-card__image">
-                    <img src="../assets/img/image8_page_Autre.avif" alt="Logo du projet">
+                    <img src="../assets/img/image8_page_Autre.avif" alt="Project logo">
                 </div>
                 <div class="project-card__content">
                     <h3 class="project-card__title">Devlace</h3>
-                    <p class="project-card__description">Projet de Pierre Mouilleseaux</p>
+                    <p class="project-card__description">Project by Pierre Mouilleseaux</p>
                 </div>
             </div>
         </div>
@@ -197,22 +195,22 @@
                 </div>
             </div>
             <div class="footer__leftelement">
-                <p>MENTIONS LÉGALES</p>
+                <p>LEGAL NOTICE</p>
                 <div class="footer__leftelement-text">
-                    <p>“projet réalisé en 2025 dans le cadre d’un exercice pédagogique au département MMi de
-                        Montbéliard“</p>
+                    <p>"project carried out in 2025 as part of a pedagogical exercise at the MMi department of
+                        Montbéliard"</p>
                 </div>
             </div>
         </div>
 
         <div class="footer__right">
-            <a href="glossaire.html" class="footer__rightelement">Glossaire</a>
-            <a href="contact.html" class="footer__rightelement">Contactez-nous</a>
-            <a href="a-propos.html" class="footer__rightelement">À propos</a>
-            <a href="autres-projets.html" class="footer__rightelement">Autres Projets</a>
+            <a href="glossaire.html" class="footer__rightelement">Glossary</a>
+            <a href="contact.html" class="footer__rightelement">Contact us</a>
+            <a href="a-propos.html" class="footer__rightelement">About</a>
+            <a href="autres-projets.html" class="footer__rightelement">Other Projects</a>
             <div class="footer__division"></div>
             <a href="https://www.iut-nfc.univ-fcomte.fr/b-u-t-metiers-du-multimedia-et-de-linternet/" target="_blank"
-                class="footer__logoMMi" aria-label="Visiter le site du département MMi (nouvelle fenêtre)">
+                class="footer__logoMMi" aria-label="Visit the MMi department website (new window)">
                 <img src="../assets/img/MMI_logo.svg" alt="Logo MMi">
             </a>
         </div>
