--- a/en/contact.html
+++ b/en/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -14,33 +14,33 @@
     <header>
         <section class="header_logo">
             <div class="header_logo-block">
-                <img class="header_logo-image" src="../assets/img/Logo_header.avif" alt="Image de Ada Lovelace">
+                <img class="header_logo-image" src="../assets/img/Logo_header.avif" alt="Image of Ada Lovelace">
                 <div class="header_logo-composant"></div>
                 <div class="header_logo-ada">
-                    <a href="index.html"><img src="../assets/img/logo ADA.svg" alt="Image du logo de Ada Lovelace "></a>
+                    <a href="index.html"><img src="../assets/img/logo ADA.svg" alt="Ada Lovelace logo"></a>
                 </div>
             </div>
         </section>
         <h1 class="header__title">Contact</h1>
-        <div class="language-selector" role="navigation" aria-label="Sélecteur de langue">
-            <a href="/en/" class="language-selector__link language-selector__link--active"
-                aria-label="Passer à la version anglaise">FR</a>
+        <div class="language-selector" role="navigation" aria-label="Language selector">
+            <a href="/fr/" class="language-selector__link language-selector__link--active"
+                aria-label="Switch to French version">EN</a>
         </div>
     </header>
 
     <nav class="menu">
-        <button class="menu__toggle" aria-label="Ouvrir le menu">
+        <button class="menu__toggle" aria-label="Open menu">
             <span class="menu__bar"></span>
             <span class="menu__bar"></span>
             <span class="menu__bar"></span>
         </button>
 
-        <div class="menu__overlay" role="dialog" aria-label="Menu de navigation principal">
+        <div class="menu__overlay" role="dialog" aria-label="Main navigation menu">
             <ul class="menu__list" role="menu">
                 <li>
                     <a href="index.html" class="menu__button"
                         style="background-image: url('../assets/img/hero_page_accueil2.avif')">
-                        <span>Page d''accueil</span>
+                        <span>Home</span>
                     </a>
                 </li>
                 <li>
@@ -52,13 +52,13 @@
                 <li>
                     <a href="effetmatilda.html" class="menu__button"
                         style="background-image: url('../assets/img/card2.avif')">
-                        <span>L''effet Matilda</span>
+                        <span>The Matilda Effect</span>
                     </a>
                 </li>
                 <li>
                     <a href="scienceada.html" class="menu__button"
                         style="background-image: url('../assets/img/card3.avif')">
-                        <span>La science d''Ada</span>
+                        <span>Science from Ada</span>
                     </a>
                 </li>
                 <li>
@@ -70,19 +70,17 @@
                 <li>
                     <a href="litterature.html" class="menu__button"
                         style="background-image: url('../assets/img/card5.avif')">
-                        <span>Ada dans la littérature</span>
+                        <span>Ada in Literature</span>
                     </a>
                 </li>
             </ul>
 
-            <div class="menu__footer" role="navigation" aria-label="Liens secondaires">
-                <a href="glossaire.html" class="menu__footer-link" aria-label="Consulter le glossaire">Glossaire</a>
-                <a href="contact.html" class="menu__footer-link"
-                    aria-label="Accéder au formulaire de contact">Contactez-nous</a>
-                <a href="a-propos.html" class="menu__footer-link" aria-label="En savoir plus à propos du projet">À
-                    propos</a>
-                <a href="autres-projets.html" class="menu__footer-link" aria-label="Découvrir d''autres projets">Autres
-                    projets</a>
+            <div class="menu__footer" role="navigation" aria-label="Secondary links">
+                <a href="glossaire.html" class="menu__footer-link" aria-label="Consult the glossary">Glossary</a>
+                <a href="contact.html" class="menu__footer-link" aria-label="Access the contact form">Contact us</a>
+                <a href="a-propos.html" class="menu__footer-link" aria-label="Learn more about the project">About</a>
+                <a href="autres-projets.html" class="menu__footer-link" aria-label="Discover other projects">Other
+                    projects</a>
             </div>
         </div>
     </nav>
@@ -95,24 +93,24 @@
         <section class="contact-section">
             <form class="contact-form" action="#" method="post">
                 <div class="contact-form__group">
-                    <label for="demande" class="contact-form__label">Demande</label>
+                    <label for="demande" class="contact-form__label">Request</label>
                     <input type="text" id="demande" name="demande" class="contact-form__input"
-                        placeholder="Expliquer votre demande" required>
+                        placeholder="Explain your request" required>
                 </div>
 
                 <div class="contact-form__group">
-                    <label for="descriptif" class="contact-form__label">Descriptif</label>
+                    <label for="descriptif" class="contact-form__label">Description</label>
                     <textarea id="descriptif" name="descriptif" class="contact-form__textarea"
-                        placeholder="Expliquer en détail votre demande" rows="6" required></textarea>
+                        placeholder="Explain your request in detail" rows="6" required></textarea>
                 </div>
 
                 <div class="contact-form__group">
-                    <label for="email" class="contact-form__label">Mail</label>
+                    <label for="email" class="contact-form__label">Email</label>
                     <input type="email" id="email" name="email" class="contact-form__input"
-                        placeholder="Indiquer votre mail" required>
+                        placeholder="Enter your email" required>
                 </div>
 
-                <button type="submit" class="contact-form__button">Envoyer</button>
+                <button type="submit" class="contact-form__button">Send</button>
             </form>
         </section>
     </main>
@@ -128,22 +126,22 @@
                 </div>
             </div>
             <div class="footer__leftelement">
-                <p>MENTIONS LÉGALES</p>
+                <p>LEGAL NOTICE</p>
                 <div class="footer__leftelement-text">
-                    <p>"projet réalisé en 2025 dans le cadre d''un exercice pédagogique au département MMi de
+                    <p>"project carried out in 2025 as part of a pedagogical exercise at the MMi department of
                         Montbéliard"</p>
                 </div>
             </div>
         </div>
 
         <div class="footer__right">
-            <a href="glossaire.html" class="footer__rightelement">Glossaire</a>
-            <a href="contact.html" class="footer__rightelement">Contactez-nous</a>
-            <a href="a-propos.html" class="footer__rightelement">À propos</a>
-            <a href="autres-projets.html" class="footer__rightelement">Autres Projets</a>
+            <a href="glossaire.html" class="footer__rightelement">Glossary</a>
+            <a href="contact.html" class="footer__rightelement">Contact us</a>
+            <a href="a-propos.html" class="footer__rightelement">About</a>
+            <a href="autres-projets.html" class="footer__rightelement">Other Projects</a>
             <div class="footer__division"></div>
             <a href="https://www.iut-nfc.univ-fcomte.fr/b-u-t-metiers-du-multimedia-et-de-linternet/" target="_blank"
-                class="footer__logoMMi" aria-label="Visiter le site du département MMi (nouvelle fenêtre)">
+                class="footer__logoMMi" aria-label="Visit the MMi department website (new window)">
                 <img src="../assets/img/MMI_logo.svg" alt="Logo MMi">
             </a>
         </div>
