--- a/en/glossaire.html
+++ b/en/glossaire.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -93,7 +93,7 @@
                 <div class="textmono-title--glossaire">Algorithm :</div>
                 <p>A sequence of precise instructions or rules for performing a task or solving a problem.</p>
                 <div class="textmono-title--glossaire">Charles Babbage :</div>
-                <p>+A 19th-century British mathematician and inventor, considered the father of computers. He conceived
+                <p>A 19th-century British mathematician and inventor, considered the father of computers. He conceived
                     and designed the analytical engine, the ancestor of modern computers, with the intellectual
                     assistance of Ada Lovelace.</p>
                 <div class="textmono-title--glossaire">Analytical Engine :</div>
