--- a/en/index.html
+++ b/en/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -14,16 +14,16 @@
     <header>
         <section class="header_logo">
             <div class="header_logo-block">
-                <img class="header_logo-image" src="../assets/img/Logo_header.avif" alt="Image de Ada Lovelace">
+                <img class="header_logo-image" src="../assets/img/Logo_header.avif" alt="Image of Ada Lovelace">
                 <div class="header_logo-composant"></div>
                 <div class="header_logo-ada">
-                    <a href="index.html"><img src="../assets/img/logo ADA.svg" alt="Image du logo de Ada Lovelace "></a>
+                    <a href="index.html"><img src="../assets/img/logo ADA.svg" alt="Ada Lovelace logo"></a>
                 </div>
             </div>
         </section>
-        <div class="language-selector" role="navigation" aria-label="Sélecteur de langue">
+        <div class="language-selector" role="navigation" aria-label="Language selector">
             <a href="/fr/" class="language-selector__link language-selector__link--active"
-                aria-label="Passer à la version française">EN</a>
+                aria-label="Switch to the French version">EN</a>
         </div>
     </header>
 
@@ -69,18 +69,16 @@
                 <li>
                     <a href="litterature.html" class="menu__button"
                         style="background-image: url('../assets/img/card5.avif')">
-                        <span>Ada in the litterature</span>
+                        <span>Ada in Literature</span>
                     </a>
                 </li>
             </ul>
 
-            <div class="menu__footer" role="navigation" aria-label="Liens secondaires">
-                <a href="glossaire.html" class="menu__footer-link" aria-label="Consulter le glossaire">Glossary</a>
-                <a href="contact.html" class="menu__footer-link"
-                    aria-label="Accéder au formulaire de contact">Contactez-us</a>
-                <a href="a-propos.html" class="menu__footer-link"
-                    aria-label="En savoir plus à propos du projet">About</a>
-                <a href="autres-projets.html" class="menu__footer-link" aria-label="Découvrir d'autres projets">Other
+            <div class="menu__footer" role="navigation" aria-label="Secondary links">
+                <a href="glossaire.html" class="menu__footer-link" aria-label="Consult the glossary">Glossary</a>
+                <a href="contact.html" class="menu__footer-link" aria-label="Access the contact form">Contact us</a>
+                <a href="a-propos.html" class="menu__footer-link" aria-label="Learn more about the project">About</a>
+                <a href="autres-projets.html" class="menu__footer-link" aria-label="Discover other projects">Other
                     projects</a>
             </div>
         </div>
@@ -121,7 +119,7 @@
         </section>
 
         <section class="section__title">
-            <h2>Articles :</h2>
+            <h2>Articles:</h2>
         </section>
         <section class="carousel">
             <div class="carousel__container">
@@ -157,7 +155,7 @@
                         <div class="card__content">
                             <h3 class="card__title" id="card-title-3">Ada's Science</h3>
                             <p class="card__text">Discover Ada Lovelace's inventions and her impact on
-                                l'informatique moderne.</p>
+                                modern computing.</p>
                         </div>
                     </article>
                 </a>
