--- a/en/scienceada.html
+++ b/en/scienceada.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -14,17 +14,17 @@
     <header>
         <section class="header_logo">
             <div class="header_logo-block">
-                <img class="header_logo-image" src="../assets/img/Logo_header.avif" alt="Image de Ada Lovelace">
+                <img class="header_logo-image" src="../assets/img/Logo_header.avif" alt="Image of Ada Lovelace">
                 <div class="header_logo-composant"></div>
                 <div class="header_logo-ada">
-                    <a href="index.html"><img src="../assets/img/logo ADA.svg" alt="Image du logo de Ada Lovelace "></a>
+                    <a href="index.html"><img src="../assets/img/logo ADA.svg" alt="Ada Lovelace logo "></a>
                 </div>
             </div>
         </section>
         <h1 class="header__title">Science From Ada</h1>
         <div class="language-selector" role="navigation" aria-label="language selector">
-            <a href="/en/" class="language-selector__link language-selector__link--active"
-                aria-label="Switch to English version">En</a>
+            <a href="/fr/" class="language-selector__link language-selector__link--active"
+                aria-label="Switch to English version">EN</a>
         </div>
     </header>
 
@@ -88,7 +88,7 @@
     <main>
         <section class="hero">
             <div class="hero__science">
-                <img src="../assets/img/hero_page_Science.avif" alt="Hero de la page de la science d'Ada Lovelace">
+                <img src="../assets/img/hero_page_Science.avif" alt="Hero of the Ada Lovelace science page">
             </div>
         </section>
         <section class="section__title">
