--- a/en/theimitationgame.html
+++ b/en/theimitationgame.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -14,22 +14,22 @@
     <header>
         <section class="header_logo">
             <div class="header_logo-block">
-                <img class="header_logo-image" src="../assets/img/Logo_header.avif" alt="Image de Ada Lovelace">
+                <img class="header_logo-image" src="../assets/img/Logo_header.avif" alt="Picture of Ada Lovelace">
                 <div class="header_logo-composant"></div>
                 <div class="header_logo-ada">
-                    <a href="index.html"><img src="../assets/img/logo ADA.svg" alt="Image du logo de Ada Lovelace "></a>
+                    <a href="index.html"><img src="../assets/img/logo ADA.svg" alt="Ada Lovelace logo"></a>
                 </div>
             </div>
         </section>
         <h1 class="header__minititle">The Imitation <br> Game</h1>
-        <div class="language-selector" role="navigation" aria-label="Sélecteur de langue">
-            <a href="/en/" class="language-selector__link language-selector__link--active"
-                aria-label="Passer à la version anglaise">FR</a>
+        <div class="language-selector" role="navigation" aria-label="Language selector">
+            <a href="/fr/" class="language-selector__link language-selector__link--active"
+                aria-label="Switch to English version">EN</a>
         </div>
     </header>
 
     <nav class="menu">
-        <button class="menu__toggle" aria-label="Ouvrir le menu">
+        <button class="menu__toggle" aria-label="Open menu">
             <span class="menu__bar"></span>
             <span class="menu__bar"></span>
             <span class="menu__bar"></span>
@@ -40,7 +40,7 @@
                 <li>
                     <a href="index.html" class="menu__button"
                         style="background-image: url('../assets/img/hero_page_accueil2.avif')">
-                        <span>Page d'accueil</span>
+                        <span>Home</span>
                     </a>
                 </li>
                 <li>
@@ -52,13 +52,13 @@
                 <li>
                     <a href="effetmatilda.html" class="menu__button"
                         style="background-image: url('../assets/img/card2.avif')">
-                        <span>L'effet Matilda</span>
+                        <span>The Matilda Effect</span>
                     </a>
                 </li>
                 <li>
                     <a href="scienceada.html" class="menu__button"
                         style="background-image: url('../assets/img/card3.avif')">
-                        <span>La science d'Ada</span>
+                        <span>Science from Ada</span>
                     </a>
                 </li>
                 <li>
@@ -70,19 +70,17 @@
                 <li>
                     <a href="litterature.html" class="menu__button"
                         style="background-image: url('../assets/img/card5.avif')">
-                        <span>Ada dans la littérature</span>
+                        <span>Ada in Literature</span>
                     </a>
                 </li>
             </ul>
 
-            <div class="menu__footer" role="navigation" aria-label="Liens secondaires">
-                <a href="glossaire.html" class="menu__footer-link" aria-label="Consulter le glossaire">Glossaire</a>
-                <a href="contact.html" class="menu__footer-link"
-                    aria-label="Accéder au formulaire de contact">Contactez-nous</a>
-                <a href="a-propos.html" class="menu__footer-link" aria-label="En savoir plus à propos du projet">À
-                    propos</a>
-                <a href="autres-projets.html" class="menu__footer-link" aria-label="Découvrir d'autres projets">Autres
-                    projets</a>
+            <div class="menu__footer" role="navigation" aria-label="Secondary links">
+                <a href="glossaire.html" class="menu__footer-link" aria-label="Consult the glossary">Glossary</a>
+                <a href="contact.html" class="menu__footer-link" aria-label="Access the contact form">Contact us</a>
+                <a href="a-propos.html" class="menu__footer-link" aria-label="Learn more about the project">About</a>
+                <a href="autres-projets.html" class="menu__footer-link" aria-label="Discover other projects">Other
+                    projects</a>
             </div>
         </div>
     </nav>
@@ -94,54 +92,51 @@
             </div>
         </section>
         <section class="section__title">
-            <h2>Quel lien entretiennent le film “The Imitation Game” et Ada Lovelace ?</h2>
+            <h2>What is the connection between the film “The Imitation Game” and Ada Lovelace?</h2>
         </section>
         <section class="Texte__principal-science">
             <div class="navyblue__block">
-                <div class="textmono-title">Topo du film</div>
-                <p>Le film “The Imitation Game” retrace la vie d’Alan Turing, pionnier de l’informatique, influencé par
-                    les travaux d’Ada Lovelace. Ada Lovelace est citée en lien avec le concept de l’intelligence
-                    artificielle et le fameux “Lovelace’s objection”, où elle affirmait que les machines ne peuvent pas
-                    penser par elles-mêmes, ce qui inspira Turing pour formuler le test du même nom. Leur lien symbolise
-                    deux visions : Lovelace a anticipé la collaboration homme-machine comme un partenariat créatif,
-                    alors que Turing a imaginé le moment où l’intelligence artificielle pourrait rivaliser avec
-                    l’humain.</p>
+                <div class="textmono-title">Film Overview</div>
+                <p>The film “The Imitation Game” retraces the life of Alan Turing, a pioneer of computing, influenced by
+                    the work of Ada Lovelace. Ada Lovelace is cited in connection with the concept of
+                    artificial intelligence and the famous “Lovelace’s objection”, where she stated that machines cannot
+                    think for themselves, which inspired Turing to formulate the test of the same name. Their connection
+                    symbolizes two visions: Lovelace anticipated human-machine collaboration as a creative partnership,
+                    while Turing imagined the moment when artificial intelligence could rival humans.</p>
             </div>
         </section>
         <section class="youtube_video">
             <video width="100%" height="auto" controls style="max-width: 560px; aspect-ratio: 16/9;">
                 <source
-                    src="../assets/video/IMITATION GAME - Bande Annonce Officielle VF - Benedict Cumberbatch Keira Knightley (2015).mp4"
+                    src="../assets/video/The Imitation Game Official Trailer #1 (2014) - Benedict Cumberbatch Movie HD.mp4"
                     type="video/mp4">
-                Votre navigateur ne supporte pas la lecture de vidéos.
+                Your browser does not support the video tag.
             </video>
         </section>
         <section class="citation">
             <blockquote>
-                <p>"Une machine peut faire ce qu’on la programme pour faire, mais cela ne signifie pas qu’elle ne peut
-                    pas nous surprendre."</p>
+                <p>"A machine can do what it is programmed to do, but that does not mean it cannot surprise us."</p>
             </blockquote>
         </section>
-        <h2 class="citation__personne">Citation d’Alan Turing</h2>
+        <h2 class="citation__personne">Quote from Alan Turing</h2>
         <section class="info-box">
-            <h3 class="info-box__title">Quel lien entre Ada et ce film ?</h3>
+            <h3 class="info-box__title">What is the connection between Ada and this film?</h3>
             <div class="info-box__content">
-                <p>Dans le film “The Imitation Game”, Alan Turing travaille avec Joan Clarke, une brillante
-                    mathématicienne qui l’aide à décrypter les messages codés par la machine allemande Enigma. Leur
-                    collaboration est déterminante pour la réussite du projet, et rappelle fortement celle entre Charles
-                    Babbage et Ada Lovelace, un siècle plus tôt, lorsqu’ils ont travaillé ensemble sur la machine
-                    analytique, ancêtre de l’ordinateur.</p>
+                <p>In the film “The Imitation Game”, Alan Turing works with Joan Clarke, a brilliant mathematician who
+                    helps him decipher messages encoded by the German Enigma machine. Their collaboration is crucial to
+                    the project's success and strongly recalls that between Charles Babbage and Ada Lovelace, a century
+                    earlier, when they worked together on the analytical engine, a precursor to the computer.</p>
             </div>
         </section>
         <section class="image__representation">
-            <img src="../assets/img/Image1_page_Imitation.avif" alt="Image d'Alan Turing dans le film The Imitation Game"
-                loading="lazy">
+            <img src="../assets/img/Image1_page_Imitation.avif"
+                alt="Image of Alan Turing in the film The Imitation Game" loading="lazy">
         </section>
     </main>
     <footer class="footer" role="contentinfo">
         <div class="footer__left">
             <div class="footer__logo">
-                <a href="index.html"><img src="../assets/img/logo ADA.svg" alt="Image du logo de Ada Lovelace "></a>
+                <a href="index.html"><img src="../assets/img/logo ADA.svg" alt="Image of the Ada Lovelace logo"></a>
             </div>
             <div class="footer__leftelement">
                 <p>CONTACT</p>
@@ -150,23 +145,23 @@
                 </div>
             </div>
             <div class="footer__leftelement">
-                <p>MENTIONS LÉGALES</p>
+                <p>LEGAL NOTICE</p>
                 <div class="footer__leftelement-text">
-                    <p>“projet réalisé en 2025 dans le cadre d’un exercice pédagogique au département MMi de
+                    <p>“project carried out in 2025 as part of an educational exercise at the MMi department of
                         Montbéliard“</p>
                 </div>
             </div>
         </div>
 
         <div class="footer__right">
-            <a href="glossaire.html" class="footer__rightelement">Glossaire</a>
-            <a href="contact.html" class="footer__rightelement">Contactez-nous</a>
-            <a href="a-propos.html" class="footer__rightelement">À propos</a>
-            <a href="autres-projets.html" class="footer__rightelement">Autres Projets</a>
+            <a href="glossaire.html" class="footer__rightelement">Glossary</a>
+            <a href="contact.html" class="footer__rightelement">Contact Us</a>
+            <a href="a-propos.html" class="footer__rightelement">About</a>
+            <a href="autres-projets.html" class="footer__rightelement">Other Projects</a>
             <div class="footer__division"></div>
             <a href="https://www.iut-nfc.univ-fcomte.fr/b-u-t-metiers-du-multimedia-et-de-linternet/" target="_blank"
-                class="footer__logoMMi" aria-label="Visiter le site du département MMi (nouvelle fenêtre)">
-                <img src="../assets/img/MMI_logo.svg" alt="Logo MMi">
+                class="footer__logoMMi" aria-label="Visit the MMi department website (new window)">
+                <img src="../assets/img/MMI_logo.svg" alt="MMi Logo">
             </a>
         </div>
     </footer>
