--- a/en/effetmatilda.html
+++ b/en/effetmatilda.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Effet Matilda</title>
+    <title>Matilda Effect</title>
     <link rel="stylesheet" href="../src/css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Elsie+Swash+Caps&display=swap">
@@ -14,33 +14,33 @@
     <header>
         <section class="header_logo">
             <div class="header_logo-block">
-                <img class="header_logo-image" src="../assets/img/Logo_header.avif" alt="Image de Ada Lovelace">
+                <img class="header_logo-image" src="../assets/img/Logo_header.avif" alt="Image of Ada Lovelace">
                 <div class="header_logo-composant"></div>
                 <div class="header_logo-ada">
-                    <a href="index.html"><img src="../assets/img/logo ADA.svg" alt="Image du logo de Ada Lovelace "></a>
+                    <a href="index.html"><img src="../assets/img/logo ADA.svg" alt="Ada Lovelace logo"></a>
                 </div>
             </div>
         </section>
-        <h1 class="header__title">L'Effet <br> Matilda</h1>
-        <div class="language-selector" role="navigation" aria-label="Sélecteur de langue">
-            <a href="/en/" class="language-selector__link language-selector__link--active"
-                aria-label="Passer à la version anglaise">FR</a>
+        <h1 class="header__title">The Matilda <br> Effect</h1>
+        <div class="language-selector" role="navigation" aria-label="Language selector">
+            <a href="/fr/" class="language-selector__link language-selector__link--active"
+                aria-label="Switch to French version">EN</a>
         </div>
     </header>
 
     <nav class="menu">
-        <button class="menu__toggle" aria-label="Ouvrir le menu">
+        <button class="menu__toggle" aria-label="Open menu">
             <span class="menu__bar"></span>
             <span class="menu__bar"></span>
             <span class="menu__bar"></span>
         </button>
 
-        <div class="menu__overlay" role="dialog" aria-label="Menu de navigation principal">
+        <div class="menu__overlay" role="dialog" aria-label="Main navigation menu">
             <ul class="menu__list" role="menu">
                 <li>
                     <a href="index.html" class="menu__button"
                         style="background-image: url('../assets/img/hero_page_accueil2.avif')">
-                        <span>Page d'accueil</span>
+                        <span>Home</span>
                     </a>
                 </li>
                 <li>
@@ -52,13 +52,13 @@
                 <li>
                     <a href="effetmatilda.html" class="menu__button"
                         style="background-image: url('../assets/img/card2.avif')">
-                        <span>L'effet Matilda</span>
+                        <span>The Matilda Effect</span>
                     </a>
                 </li>
                 <li>
                     <a href="scienceada.html" class="menu__button"
                         style="background-image: url('../assets/img/card3.avif')">
-                        <span>La science d'Ada</span>
+                        <span>Science from Ada</span>
                     </a>
                 </li>
                 <li>
@@ -70,19 +70,17 @@
                 <li>
                     <a href="litterature.html" class="menu__button"
                         style="background-image: url('../assets/img/card5.avif')">
-                        <span>Ada dans la littérature</span>
+                        <span>Ada in Literature</span>
                     </a>
                 </li>
             </ul>
 
-            <div class="menu__footer" role="navigation" aria-label="Liens secondaires">
-                <a href="glossaire.html" class="menu__footer-link" aria-label="Consulter le glossaire">Glossaire</a>
-                <a href="contact.html" class="menu__footer-link"
-                    aria-label="Accéder au formulaire de contact">Contactez-nous</a>
-                <a href="a-propos.html" class="menu__footer-link" aria-label="En savoir plus à propos du projet">À
-                    propos</a>
-                <a href="autres-projets.html" class="menu__footer-link" aria-label="Découvrir d'autres projets">Autres
-                    projets</a>
+            <div class="menu__footer" role="navigation" aria-label="Secondary links">
+                <a href="glossaire.html" class="menu__footer-link" aria-label="Consult the glossary">Glossary</a>
+                <a href="contact.html" class="menu__footer-link" aria-label="Access the contact form">Contact us</a>
+                <a href="a-propos.html" class="menu__footer-link" aria-label="Learn more about the project">About</a>
+                <a href="autres-projets.html" class="menu__footer-link" aria-label="Discover other projects">Other
+                    projects</a>
             </div>
         </div>
     </nav>
@@ -90,120 +88,121 @@
     <main>
         <section class="hero">
             <div class="hero__effet">
-                <img src="../assets/img/hero_page_Effet.avif" alt="Hero de la page de l'effet Matilda">
+                <img src="../assets/img/hero_page_Effet.avif" alt="Hero of the Matilda Effect page">
             </div>
         </section>
         <section class="section__title">
-            <h2>Qu’est ce que l’effet Matilda ?</h2>
+            <h2>What is the Matilda Effect?</h2>
         </section>
         <section class="Texte__principal-effet">
             <div class="navyblue__block">
-                <div class="textmono-title">L’effet Matilda en bref</div>
-                <p>L’effet Matilda désigne le fait que les femmes scientifiques voient souvent leurs travaux minimisés
-                    ou attribués à des hommes. Ce phénomène, nommé par l’historienne Margaret Rossiter en 1993, rappelle
-                    que les contributions des femmes sont souvent invisibilisées. Par exemple, malgré leurs découvertes
-                    majeures, les femmes sont rarement reconnues, ce qui perpétue un déséquilibre dans la science.
-                    Reconnaître cet effet est important pour valoriser équitablement le mérite des femmes et promouvoir
-                    une science plus juste et inclusive.</p>
+                <div class="textmono-title">The Matilda Effect in brief</div>
+                <p>The Matilda Effect refers to the fact that women scientists often see their work minimized
+                    or attributed to men. This phenomenon, named by historian Margaret Rossiter in 1993, reminds us
+                    that women's contributions are often made invisible. For example, despite their major discoveries,
+                    women are rarely recognized, which perpetuates an imbalance in science.
+                    Recognizing this effect is important to fairly value women's merit and promote
+                    a more just and inclusive science.</p>
             </div>
         </section>
         <section class="image__representation">
-            <img src="../assets/img/Image1_page_Effet.avif" alt="Image représentant l'effet Matilda" loading="lazy">
+            <img src="../assets/img/Image1_page_Effet.avif" alt="Image representing the Matilda Effect" loading="lazy">
         </section>
         <section class="citation">
             <blockquote>
-                <p>« L’imagination est la faculté de découverte, par excellence. C’est celle qui pénètre dans les mondes
-                    invisibles qui nous entourent, les mondes de la science. »</p>
+                <p>« Imagination is the faculty of discovery, par excellence. It is the one that penetrates the
+                    invisible worlds that surround us, the worlds of science. »</p>
             </blockquote>
         </section>
-        <h2 class="citation__personne">Citation d’Ada Lovelace</h2>
+        <h2 class="citation__personne">Quote from Ada Lovelace</h2>
         <section class="info-box">
-            <h3 class="info-box__title">Pourquoi existe-t-il?</h3>
+            <h3 class="info-box__title">Why does it exist?</h3>
             <div class="info-box__content">
-                <p>Les causes principales de l’effet Matilda sont les stéréotypes de genre, la faible présence des
-                    femmes en sciences, des discriminations dans les institutions, ainsi que des biais conscients ou
-                    inconscients favorisant les hommes. Cette inégalité se voit aussi dans les citations scientifiques
-                    et la faible attribution des prix comme les Nobel.</p>
+                <p>The main causes of the Matilda Effect are gender stereotypes, the low presence of
+                    women in science, discrimination in institutions, as well as conscious or
+                    unconscious biases favoring men. This inequality is also seen in scientific citations
+                    and the low attribution of prizes like the Nobel.</p>
             </div>
         </section>
         <section class="frise__chronologique">
-            <h2 class="text__title-frise">Frise Chronologique de quelques Matilda</h2>
+            <h2 class="text__title-frise">Timeline of some Matildas</h2>
             <div class="timeline">
                 <div class="timeline__item">
                     <div class="timeline__content">
-                        <a href="https://fr.wikipedia.org/wiki/Ada_Lovelace" target="_blank" class="timeline__image"
-                            aria-label="En savoir plus sur Ada Lovelace sur Wikipedia (nouvelle fenêtre)">
+                        <a href="https://en.wikipedia.org/wiki/Ada_Lovelace" target="_blank" class="timeline__image"
+                            aria-label="Learn more about Ada Lovelace on Wikipedia (new window)">
                             <img src="../assets/img/Image1_page_Ada.avif" alt="Ada Lovelace" loading="lazy">
                         </a>
                         <span class="timeline__date">1815</span>
                         <h3 class="timeline__title">Ada Lovelace</h3>
-                        <p class="timeline__description">Naissance à Londres</p>
+                        <p class="timeline__description">Born in London</p>
                     </div>
                     <div class="timeline__marker"></div>
                 </div>
 
                 <div class="timeline__item">
                     <div class="timeline__content">
-                        <a href="https://fr.wikipedia.org/wiki/Nettie_Stevens" target="_blank" class="timeline__image"
-                            aria-label="En savoir plus sur Nettie Stevens sur Wikipedia (nouvelle fenêtre)">
+                        <a href="https://en.wikipedia.org/wiki/Nettie_Stevens" target="_blank" class="timeline__image"
+                            aria-label="Learn more about Nettie Stevens on Wikipedia (new window)">
                             <img src="../assets/img/nettie_stevens1.avif" alt="Nettie Stevens" loading="lazy">
                         </a>
                         <span class="timeline__date">1861</span>
                         <h3 class="timeline__title">Nettie Stevens</h3>
-                        <p class="timeline__description">Naissance à Cavendish</p>
+                        <p class="timeline__description">Born in Cavendish</p>
                     </div>
                     <div class="timeline__marker"></div>
                 </div>
 
                 <div class="timeline__item">
                     <div class="timeline__content">
-                        <a href="https://fr.wikipedia.org/wiki/Alice_Ball" target="_blank" class="timeline__image"
-                            aria-label="En savoir plus sur Alice Ball sur Wikipedia (nouvelle fenêtre)">
+                        <a href="https://en.wikipedia.org/wiki/Alice_Ball" target="_blank" class="timeline__image"
+                            aria-label="Learn more about Alice Ball on Wikipedia (new window)">
                             <img src="../assets/img/alice_augusta_ball1.avif" alt="Alice Ball" loading="lazy">
                         </a>
                         <span class="timeline__date">1892</span>
                         <h3 class="timeline__title">Alice Ball</h3>
-                        <p class="timeline__description">Naissance à Seattle</p>
+                        <p class="timeline__description">Born in Seattle</p>
                     </div>
                     <div class="timeline__marker"></div>
                 </div>
 
                 <div class="timeline__item">
                     <div class="timeline__content">
-                        <a href="https://fr.wikipedia.org/wiki/Dorothy_Hodgkin" target="_blank" class="timeline__image"
-                            aria-label="En savoir plus sur Dorothy Hodgkin sur Wikipedia (nouvelle fenêtre)">
-                            <img src="../assets/img/professor_dorothy_hodgkin1.avif" alt="Dorothy Hodgkin" loading="lazy">
+                        <a href="https://en.wikipedia.org/wiki/Dorothy_Hodgkin" target="_blank" class="timeline__image"
+                            aria-label="Learn more about Dorothy Hodgkin on Wikipedia (new window)">
+                            <img src="../assets/img/professor_dorothy_hodgkin1.avif" alt="Dorothy Hodgkin"
+                                loading="lazy">
                         </a>
                         <span class="timeline__date">1906</span>
                         <h3 class="timeline__title">Dorothy Hodgkin</h3>
-                        <p class="timeline__description">Naissance au Caire</p>
+                        <p class="timeline__description">Born in Cairo</p>
                     </div>
                     <div class="timeline__marker"></div>
                 </div>
 
                 <div class="timeline__item">
                     <div class="timeline__content">
-                        <a href="https://fr.wikipedia.org/wiki/Rosalind_Franklin" target="_blank"
+                        <a href="https://en.wikipedia.org/wiki/Rosalind_Franklin" target="_blank"
                             class="timeline__image"
-                            aria-label="En savoir plus sur Rosalind Franklin sur Wikipedia (nouvelle fenêtre)">
+                            aria-label="Learn more about Rosalind Franklin on Wikipedia (new window)">
                             <img src="../assets/img/rosalind_franklin1.avif" alt="Rosalind Franklin" loading="lazy">
                         </a>
                         <span class="timeline__date">1910</span>
                         <h3 class="timeline__title">Rosalind Franklin</h3>
-                        <p class="timeline__description">Naissance à Notting Hill</p>
+                        <p class="timeline__description">Born in Notting Hill</p>
                     </div>
                     <div class="timeline__marker"></div>
                 </div>
 
                 <div class="timeline__item">
                     <div class="timeline__content">
-                        <a href="https://fr.wikipedia.org/wiki/Jocelyn_Bell" target="_blank" class="timeline__image"
-                            aria-label="En savoir plus sur Jocelyn Bell Burnell sur Wikipedia (nouvelle fenêtre)">
+                        <a href="https://en.wikipedia.org/wiki/Jocelyn_Bell" target="_blank" class="timeline__image"
+                            aria-label="Learn more about Jocelyn Bell Burnell on Wikipedia (new window)">
                             <img src="../assets/img/jocelyn_bell.avif" alt="Jocelyn Bell Burnell" loading="lazy">
                         </a>
                         <span class="timeline__date">1943</span>
                         <h3 class="timeline__title">Jocelyn Bell Burnell</h3>
-                        <p class="timeline__description">Naissance à Lurgan</p>
+                        <p class="timeline__description">Born in Lurgan</p>
                     </div>
                     <div class="timeline__marker"></div>
                 </div>
@@ -222,22 +221,22 @@
                 </div>
             </div>
             <div class="footer__leftelement">
-                <p>MENTIONS LÉGALES</p>
+                <p>LEGAL NOTICE</p>
                 <div class="footer__leftelement-text">
-                    <p>“projet réalisé en 2025 dans le cadre d’un exercice pédagogique au département MMi de
-                        Montbéliard“</p>
+                    <p>"project carried out in 2025 as part of a pedagogical exercise at the MMi department of
+                        Montbéliard"</p>
                 </div>
             </div>
         </div>
 
         <div class="footer__right">
-            <a href="glossaire.html" class="footer__rightelement">Glossaire</a>
-            <a href="contact.html" class="footer__rightelement">Contactez-nous</a>
-            <a href="a-propos.html" class="footer__rightelement">À propos</a>
-            <a href="autres-projets.html" class="footer__rightelement">Autres Projets</a>
+            <a href="glossaire.html" class="footer__rightelement">Glossary</a>
+            <a href="contact.html" class="footer__rightelement">Contact us</a>
+            <a href="a-propos.html" class="footer__rightelement">About</a>
+            <a href="autres-projets.html" class="footer__rightelement">Other Projects</a>
             <div class="footer__division"></div>
             <a href="https://www.iut-nfc.univ-fcomte.fr/b-u-t-metiers-du-multimedia-et-de-linternet/" target="_blank"
-                class="footer__logoMMi" aria-label="Visiter le site du département MMi (nouvelle fenêtre)">
+                class="footer__logoMMi" aria-label="Visit the MMi department website (new window)">
                 <img src="../assets/img/MMI_logo.svg" alt="Logo MMi">
             </a>
         </div>
